# uuid-fhir-pyaefi

./: pyproject.toml
pyaefi/: __init__.py  aefi_uuid.py
tests/: test_uuid_aefi.py
