[project]
name = "uuid-fhir-pyaefi"
version = "0.0.1"
description = "Python library for create AEFI identifiers UUID based for FHIR QuestionnaireResponse resource"
authors = [
    {name = "Alejandro Benavides Garro", email = "abenavidescr@gmail.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["uuid", "aefi", "esavi", "fhir"]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
build = ["build", "twine"]

[project.urls]
homepage = "https://github.com/openESAVI/uuid-fhir-pyaefi"
bug-tracker = "https://github.com/openESAVI/uuid-fhir-pyaefi/issues"

[tool.bumpver]
current_version = "1.1.2"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

[tool.hatch.build]
include = [
    "pkg/**",
    "/tests",
]
exclude = [
    "*.pyc",
    "__pycache__",
    ".cache",
    ".eggs",
    ".git",
    ".tox",
    ".venv",
    "build",
    "dist",
    "docs",
    "venv",
    ".venv",
]