[project]
name = "uuid-fhir-pyaefi"
version = "0.0.1"
description = "Python library for create AEFI identifiers UUID based for FHIR QuestionnaireResponse resource"
authors = [
    {name = "Alejandro Benavides Garro", email = "abenavidescr@gmail.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["uuid", "aefi", "esavi", "fhir"]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
build = ["build", "twine"]

[project.urls]
Repository = "https://github.com/openESAVI/uuid-fhir-pyaefi"
Changelog = "https://github.com/openESAVI/uuid-fhir-pyaefi/releases"

